--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ PreprocessesTraining.csv
 PreprocessesTraining_label.csv
 PreprocessesTraining_label_oh.csv
 TrainingdataElevator_lastMonth.csv
+.ipynb_checkpoints/AI_Hackathon-checkpoint.ipynb
+./EvaluationdataElevator/*
+*-checkpoint.ipynb
